# OpenFace2-API

./: .gitignore  CMakeLists.txt  README.md  download_models.ps1  download_models.sh
openface2/FaceAnalyser/: CMakeLists.txt
openface2/GazeAnalyser/: CMakeLists.txt
openface2/LandmarkDetector/: CMakeLists.txt
openface2/LandmarkDetector/include/: stdafx.h
openface2/LandmarkDetector/src/: LandmarkDetectorModel.cpp
src/: CMakeLists.txt  GetLandmarks.cpp
